# ErgodeReconcile

./: .gitignore  RECONCILIATION_STEPS.txt  USER_GUIDE.txt  main.py  pyproject.toml  requirements.txt
data/: mappings.parquet  master.parquet
