[project]
name = "ergode_reconcile"
version = "0.1.0"
description = "A Python application for data reconciliation with Streamlit interface"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "python-dateutil>=2.8.2",
    "openpyxl>=3.1.0",
    "pyarrow>=10.0.0",
]
